@@ -27,19 +27,20 @@ before_install:
 jobs:
   include:
     - stage: check
-      rvm: 2.4.1
+      rvm: 2.4.4
+      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
+        - bundle exec rake pkg:check_version
         - bundle exec rake lint
         - bundle exec rake metadata_lint
-        - bundle exec rake pkg:check_version
         - bundle exec rake pkg:compare_latest_tag
         - bundle exec rake pkg:create_tag_changelog
         - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.4.1
+      rvm: 2.4.4
       env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
@@ -50,26 +51,8 @@ jobs:
       script:
         - bundle exec rake spec
 
-    - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.9.2"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.8.2"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.7.0"
-      script:
-        - bundle exec rake spec
-
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -89,5 +72,5 @@ jobs:
             secure: "MBjt2mLRr8F1LrTbEmkMJ6UHT/tn67REpF0yNFk8e+dafejFcPealJSVku4XKsnZZvY44KSkuEvpqfzig089lsxJQh4MF+Lrx9Ausys3+BUWtIoOqam1A0raj2iR6+4vchAx+kslq9yVSB/59lQLP8QDFEeC8mIR2AQY8IWXB2wPmR6surFT1hN0IZk37TYgsBy/fXe6SV44z9wQDRSI0VW7c/TaG/DloI09IkGxH5wo+5GNZQVTrZazE+XhKYhc449YmSpaWgCjpP4cPZcdbYORMZd5tw1FieAu2V+1tiiVf2I3CdEZH0/We3J60llgO7htg7NMBSzyRuCJouV+0O4UbhCN9eNroQTGNTGFiiT4+KHBRYYW/V98+830SPVVgFYYFe6l5faG4x2nd5MBdXp3JeBjAD/AaKJxvXKR5eztE1tw6NXjalya5KlW+VS0xZ099O1RyoGzKpPXnbKXg4ZAGA5lC6DyIwtKuXOtPIMfidCMajChH9lEtbBEUgaVyxqxzoZ5S8mlD8PMxkM8dHaDHkjnsnnHNtygKS3yhNXm7PMHy5dKnkRZkgYbBvXMBcwMCHxlT4ndXKmKfLPW0xnAW8K163fZGc+iKNOWa3m5bZxRlYBbKAQl6wBJIsfbKJw9Dl1pK+vgsqE0Ha4DnnXkrb9FAxVQiNXd46tPLEY="
           on:
             tags: true
-            rvm: 2.4.1
+            rvm: 2.4.4
             condition: '($SKIP_FORGE_PUBLISH != true)'
